# vivo

./: .gitignore  .gitmodules  CLAUDE.md  README.md  TODO.md  justfile  pyproject.toml  pyrightconfig.json  setup_abletonosc.py  setup_remote_script.py
.claude/rules/: abletonosc-reference.md
.github/actions/check/: action.yml
.github/actions/setup/: action.yml
.github/scripts/: install-python-deps.sh  resolve-version.sh  self-sign.sh  stamp-version.sh
.github/workflows/: ci.yml  release.yml
remote_script/: __init__.py  _config.py  liveearsosc.py  osc_server.py  vivosc.py
server/: app.py  bridge.py  main.py  mixer_service.py  models.py  solo_manager.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/html/: guide.html
src-tauri/src/: lib.rs  main.rs
tests/: conftest.py  factories.py  test_app.py  test_mixer_service.py  test_models.py  test_solo_manager.py
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.svelte  main.js
ui/src/lib/: helpers.js  helpers.test.js
ui/src/lib/components/: ChannelStrip.svelte  Fader.svelte  LandingPage.svelte  MasterOutput.svelte  MeterBar.svelte  MixerPage.svelte  ToggleButton.svelte
ui/src/lib/stores/: connection.svelte.js  mixer.svelte.js
ui/src/lib/styles/: global.css
