[tool.poetry]
name = "vivo"
version = "0.1.0"
description = "Web-based mixer for Ableton Live"
authors = []
readme = "README.md"
packages = [{include = "server"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115"}
python-osc = "^1.9"
injector = "^0.22"

[tool.poetry.group.test.dependencies]
pytest = "^8"
httpx = "^0.28"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
