[package]
name = "live-ears"
version = "0.1.0"
description = "System tray host for the Live Ears monitor mixer"
authors = []
license = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "live_ears_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
dirs = "6"
open = "5"
qrcode = "0.14"
